# ROS2-SP-APPs

./: .gitignore  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  all_time_records_example.tar.xz  clear_all_time_records.py  ros2_commands.sh
Experiments/: command_to_transmit_file.sh  load_exp_data.sh  slam_execution_time_bf.txt  slam_execution_time_rm_slam_high.txt  slam_execution_time_rm_slam_low.txt
SP_Metric_Opt/: CMakeLists.txt  Instructions_for_simulation.txt  README.md
SP_Metric_Opt/Gen_Taskset/: gen_taskset.py
SP_Metric_Opt/TaskData/: pa_res_test_robotics_v1.yaml  pa_result.yaml  ryan_robotics_v1.yaml  ryan_robotics_v2.yaml  ryan_robotics_v3.yaml  ryan_robotics_v4.yaml  ryan_robotics_v5.yaml  sim_res_BR_ryan_robotics_v1.txt  sim_res_BR_ryan_robotics_v3.txt  sim_res_CFS_ryan_robotics_v3.txt  sim_res_INCR_ryan_robotics_v1.txt  sim_res_INCR_ryan_robotics_v2.txt  sim_res_INCR_ryan_robotics_v3.txt  sim_res_RMF_ryan_robotics_v3.txt  sim_res_RMS_ryan_robotics_v3.txt  taskset_cfg_1.json  taskset_cfg_10_1.json  taskset_cfg_10_2.json  taskset_cfg_10_3.json  taskset_cfg_10_4.json  taskset_cfg_4_1.json  taskset_cfg_4_2.json  taskset_cfg_4_3.json  taskset_cfg_4_4.json  taskset_cfg_4_5.json  taskset_cfg_6_1.json  taskset_cfg_6_2.json  taskset_cfg_6_3.json  taskset_cfg_6_4.json  test_ddl_miss.yaml  test_ddl_miss_less_tasks.yaml  test_n3_v18.yaml  test_robotics_v1.yaml  test_robotics_v10.yaml  test_robotics_v11.yaml  test_robotics_v12.yaml  test_robotics_v13.yaml  test_robotics_v15.yaml  test_robotics_v17.yaml  test_robotics_v18.yaml  (+14 more)
SP_Metric_Opt/Visualize_SP_Metric/: SP_Metric_1739494115.txt  SP_Metric_1739494116.txt  SP_Metric_1739494117.txt  SP_Metric_1739494118.txt  (+136 more)
SP_Metric_Opt/applications/mpc/: CMakeLists.txt
SP_Metric_Opt/applications/mpc/src/: MPCUsage.h  listener_mpc.cpp
SP_Metric_Opt/applications/rrt_solver/: CMakeLists.txt
SP_Metric_Opt/applications/rrt_solver/include/rrt_solver/: rrt_solver.h
SP_Metric_Opt/applications/rrt_solver/src/: listener_rrt.cpp  rrt_demo_withGUI.cpp  rrt_demo_withoutGUI.cpp
SP_Metric_Opt/applications/tsp_solver/: CMakeLists.txt
SP_Metric_Opt/applications/tsp_solver/src/: HC.cpp  TSPSolver.cpp  TSPSolver.h  listener_tsp.cpp
SP_Metric_Opt/applications/tsp_solver_osm/: CMakeLists.txt  main.cpp  performance_data.txt  performance_data_07-11-2024 13-37-37.txt  performance_data_07-11-2024 13-38-44.txt  performance_data_07-11-2024 13-39-50.txt  performance_data_07-11-2024 13-40-56.txt  performance_data_07-11-2024 13-43-09.txt  performance_data_07-11-2024 13-44-16.txt  performance_data_07-11-2024 13-45-22.txt  performance_data_07-11-2024 13-46-29.txt  regress_exp_data.py  save_tsp_perf_time_data.cpp  tsp_listener.cpp  tsp_osm_main_utils.h
SP_Metric_Opt/applications/tsp_solver_osm/config/: algorithm_config.yaml  algorithm_config_copy_from_original_repo.yaml
SP_Metric_Opt/applications/tsp_solver_osm/experiments/: 2024-06-05-11-48-21_command_history.csv
SP_Metric_Opt/applications/tsp_solver_osm/include/setting/: imomd_setting_t.h
SP_Metric_Opt/applications/tsp_solver_osm/include/utils/: csv.h
SP_Metric_Opt/applications/tsp_solver_osm/src/: imomd_rrt_star.cpp
SP_Metric_Opt/tests/: AnalyzePriorityAssignment.cpp  AnalyzePriorityAssignmentIncrementalExample.cpp  AnalyzeSP_Metric.cpp  CMakeLists.txt  CSPSimulation.cpp  CSPSimulation_2.cpp  RunPA_Opt_Incremenal.cpp  testBF_w_TL.cpp  testExecutionTimePredict.cpp  testExtProfiler.cpp  testIO.cpp  testIncreOpt_w_TL.cpp  testOptSingleFile.cpp  testOptimizeIncrePA.cpp  testOptimizePA.cpp  testProbability.cpp  testPublisher.cpp  testRMCFS.cpp  testRTA.cpp  testReactionTime.cpp  testSP.cpp  testScheduleSimulate.cpp
SP_Metric_Opt_Old/: CMakeLists.txt
SP_Metric_Opt_Old/applications/dynaslam/: CMakeLists.txt  CMakeLists.txt.save
SP_Metric_Opt_Old/applications/dynaslam/include/dynaslam/: dynaslam_wrapper.h
SP_Metric_Opt_Old/applications/real_time_manager/: CMakeLists.txt
SP_Metric_Opt_Old/applications/real_time_manager/configs/: local_fixed_cpu_and_priority_RM.yaml
SP_Metric_Opt_Old/applications/real_time_manager/include/real_time_manager/: real_time_manager.h  scheduler_wrapper.h  update_priority_assignment.h
SP_Metric_Opt_Old/applications/real_time_manager/src/: listener_scheduler.cpp
all_time_records/: CameraTrajectory.txt  KeyFrameTrajectory.txt  mpc_execution_time.txt  mpc_response_time.txt  mpc_subscriber.txt  publisher.txt  publisher_mpc.txt  publisher_rrt.txt  publisher_scheduler.txt  publisher_slam.txt  publisher_tsp.txt  rrt_execution_time.txt  rrt_response_time.txt  rrt_subscriber.txt  scheduler_execution_time.txt  scheduler_subscriber.txt  slam_execution_time.txt  slam_response_time.txt  slam_subscriber.txt  task_characteristics.yaml  tsp_execution_time.txt  tsp_response_time.txt  tsp_subscriber.txt
scripts/: analyze_response_time.py  clear_all_time_records.py  launch_all_tasks.py  launch_all_the_nodes.py  plot_SLAM_ET.py  plot_sp_metric_range.py  report_avg_scheduler_overhead.py  run_all_tasks.sh  run_multiple_times.sh  run_system_multi_times.sh  set_cpu_affinity_and_priority.sh  set_tsp_max_time.py  start_system.sh
src/dynaslam/: CMakeLists.txt  package.xml
src/dynaslam/include/dynaslam/: dynaslam_wrapper.h
src/dynaslam/src/: dynaslam_demo.cpp  listener_slam.cpp
src/mpc/: CMakeLists.txt  package.xml
src/mpc/src/: MPCExample.cpp  MPCUsage.h  listener_mpc.cpp
src/real_time_manager/: CMakeLists.txt  README.md  package.xml
src/real_time_manager/configs/: local_cpu_and_priority.yaml  local_fixed_cpu_and_priority.yaml  local_fixed_cpu_and_priority_CFS.yaml  local_fixed_cpu_and_priority_RM.yaml
src/real_time_manager/include/real_time_manager/: execution_time_estimator.h  real_time_manager.h  update_priority_assignment.h
src/real_time_manager/src/: et_statistics.cpp  listener_scheduler.cpp  listener_scheduler_fixed_priority.cpp  set_cpu_and_priority.cpp  update_priority_assignments.cpp
src/tsp_solver/: CMakeLists.txt  package.xml
src/tsp_solver/src/: TSP.h  TSPSolver.cpp  TSP_executable.cpp  listener_ros2.cpp  listener_tsp.cpp
(+2925 files in other folders)
